--- a/src/main/webapp/resources/css/fastway.css
+++ b/src/main/webapp/resources/css/fastway.css
@@ -140,8 +140,8 @@
 .order .store_map .pagination .next{margin-left: 18px;}
 
 /* 메뉴 리스트  */
-.order .menu_list .tab02 ul li:first-child a{font-size: 0;}
-.order .menu_list .tab02 ul li:first-child a:after{content: ''; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 44px; height: 44px; background: url('../images/order/fast_sub/icon_list_bookmark.png') no-repeat 0 0;}
+
+.order .menu_list .tab02 ul li:first-child a:after{position: relative; left: 50%; top: 50%; width: 44px; height: 44px; }
 
 .order .menu_list .order_con {background-color: #fff; margin:0 auto; padding-top:30px; padding-bottom:30px; width:1170px;}
 .order .menu_list .list{overflow: hidden; margin-left:-30px;}
