--- a/src/main/webapp/resources/css/choice_option.css
+++ b/src/main/webapp/resources/css/choice_option.css
@@ -10,6 +10,13 @@
 	margin: 0 auto;
 }
 
+.title_name {
+	color: #292929;
+	font-size: 50px;
+	padding-bottom: 11px;
+	letter-spacing: -0.055em
+}
+
 input+.icon {
 	width: 26px;
 	height: 26px;
@@ -124,7 +131,7 @@ div>.th_name_step03 {
 	margin-top: 10px;
 }
 
-#sum {
+#sum, #sum2, #sum3 {
 	font-size: 18px;
 	font-weight: bold;
 	color: #ffce32;
