STEP03 스크립트 수정

--- a/src/main/webapp/resources/css/choice_option.css
+++ b/src/main/webapp/resources/css/choice_option.css
@@ -196,7 +196,7 @@ p[id^=selectStep] {
 	margin-top: 0px;
 }
 
-.choice_btn {
+.choice_btn, .choice_set_btn {
 	width: 120px;
 	display: block;
 	color: #009223;
