--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 .blocker {
 	position: fixed;
 	top: 0;
@@ -9,7 +7,7 @@
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	z-index: 50;
+	z-index: 51;
 	padding: 20px;
 	box-sizing: border-box;
 	background-color: #000;
@@ -33,8 +31,8 @@
 	display: none;
 	vertical-align: middle;
 	position: relative;
-	z-index: 51;
-	max-width: 650px;
+	z-index: 52;
+	max-width: 500px;
 	box-sizing: border-box;
 	width: 90%;
 	background: #FFC300;
@@ -43,7 +41,7 @@
 	-moz-border-radius: 8px;
 	-o-border-radius: 8px;
 	-ms-border-radius: 8px;
-	border-radius: 50px;
+	border-radius: 8px;
 	-webkit-box-shadow: 0 0 10px #000;
 	-moz-box-shadow: 0 0 10px #000;
 	-o-box-shadow: 0 0 10px #000;
@@ -105,80 +103,18 @@
 	animation-delay: -0.9s
 }
 
-@
--webkit-keyframes sk-stretchdelay { 0%,40%,100%{
+@-webkit-keyframes sk-stretchdelay { 0%,40%,100%{
 	-webkit-transform: scaleY(0.5)
-}
-
-20
-
-
-%
-{
--webkit-transform
-
-
-:
-
-
-scaleY
-(
-
-
-1
-.0
-
-
-)
-
-
+}20%{
+-webkit-transform:scaleY(1.0)
 }
 }
-@
-keyframes sk-stretchdelay { 0%,40%,100%{
+@keyframes sk-stretchdelay { 0%,40%,100%{
 	transform: scaleY(0.5);
 	-webkit-transform: scaleY(0.5)
-}
-
-20
-
-
-%
+}20%
 {
-transform
-
-
-:
-
-
-scaleY
-(
-
-
-1
-.0
-
-
-)
-;
-
-
--webkit-transform
-
-
-:
-
-
-scaleY
-(
-
-
-1
-.0
-
-
-)
-
-
+transform:scaleY(1.0);
+-webkit-transform:scaleY(1.0)
 }
 }
